--- a/assets/css/download_dialog.css
+++ b/assets/css/download_dialog.css
@@ -39,6 +39,7 @@
     margin: auto;
     padding: 20px;
     -webkit-filter: url(#blur);
+    filter: url(#blur);
     -webkit-transform: translate3d(0, -900%, 0);
     transform: translate3d(0, -900%, 0);
 }
